src/styles/components/MasterHeader.scss
@import "Slider";

$content-padding: 15px 15px !important;
$label-padding: 5px 20px;
nav.navbar{
  background-color: $beige;
  width: inherit;
  right: 0px;
  left: inherit;
  &.navbar-fixed-top{
    border: none;
  }

  a:hover{
    text-decoration: none;
  }
}

.navbar-bottom{
  height: $navbar-height * 0.3571; // 0.3571 the proportion in the design between navs

  @media(max-width: $screen-xs-max) {
    min-height: $navbar-height * 0.3571;
    height: auto;
  }
  .border-right{
    border-right: 1px solid rgba(lighten($cream, 20%), 0.5);
  }
  .options{
    background: $cream;
    height: 100%;
    box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
    color: darken($cream, 20%);

    .row{
      height: 100%;
    }

    .height-100{
      height: 100%;
    }
  }
  .nav-link{
    color: $olive;
    width: 100%;
    display: block;
    text-decoration: none;
    line-height: $navbar-height * 0.3571;
    outline: none;
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    &.toggle-icon{
      font-size: 20px;
      line-height: 100%;
      margin-top: 16px;

      .ss-info{
        font-size: 24px;
      }
    }
    &.active{
      color: $brand-primary;
    }
  }
}


@media (max-width: $screen-xs-max) {
  .navbar{
    min-height: 100px;
  }
  .navbar-bottom.mobile{
    z-index: 999999;
    .full-height{
      height: 45px;
      a{
        display: block;
        @include center-align(v);
      }
    }
    .row{
      height: 45px;
      &.dark-bg{
        background: darken($brand-primary, 10%);
        box-shadow: inset 0 7px 9px -10px rgba(0,0,0,0.4);
        color: #fff;
      }
    }
  }
  .toggle-options{
    height: 100%;
    &.active{
      background: darken($brand-primary, 15%);
    }

    a{
      height: 100%;
      padding: 10px 0px;
      display: block;
      color: #fff;

      .ss-search{
        font-size: 18px;
      }
    }
    & + &{
      border-left: 1px solid rgba(#fff, 0.25);
    }
  }
  .surahs-nav{
    position: relative !important;
    ul{
      height: 150px !important;
      list-style: none;
      & > li{
        padding: 10px 15px !important;
      }
    }
  }

  .options{
    .col-xs-10{
      padding: 0px;
    }
    ul{
      padding: 0px;
      width: 100%;
      text-align: center;
      height: 100%;
      margin: 0px;
      li{
        width: 25%;
        padding: 0 1.5%;
        height: 100%;
        vertical-align: top;
        display: inline-block;
        @include center-align(v);
        background: $cream;
        color: darken($cream, 20%);
        a{
          height: 100%;
          display: block;
          line-height: 45px;
          color: $olive;
        }
      }
    }
  }
}

@media (max-width: 767px) {
.navbar-collapse .nav > .divider-vertical {
    display: none;
    }
}

.optionSelected{
    background-color: $light-green;
    color: white !important;
}

